package ucf.assignments;
/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Asad merouani
 */


public class TaskItem {
    //  class instance variable
    //  itemName : SimpleStringProperty
    //  description : SimpleStringProperty
    //  dueDate : SimpleDateFormat
    //  status SimpleStringProperty="Incomplete";

    // constructors
    //  TaskItem(String itemName, String description, String dueDate, String status) {
    //  TaskItem(String itemName, String description, String dueDate)

    // Methods
    //private void setDueDate(String dueDate)
    //public String getItemName()
    //public static SimpleDateFormat getDueDate()
    //public void setItemName(String itemName)
    //public String getDescription()
    //public void setDescription(String description)
    //public String getStatus()
    //public void setStatus(String status)
}
